publish: Add information about tokens
generated from commit 658206acf14484c090f53cd7ed407605eee29015

--- a/index.html
+++ b/index.html
@@ -527,6 +527,8 @@ the expected inputs and outputs at each step of generating a signature.</p></li>
 <li>Drop any decimals to get: <code>912345678</code></li>
 <li>Convert the result to a string to get <code>&quot;912345678&quot;</code></li>
 </ol>
+
+<p>The list of supported assets and their corresponding precisions can be found in the <a href="#tokens">Tokens</a> section.</p>
 <h2 id='parameter-casing'>Parameter Casing</h2>
 <p>Parameters used to generate a signature or sent in API requests should always be snake cased.</p>
 
